# intervalssync

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: release.yml  test.yml
docs/: AGENT.md
src/igpsync/: __init__.py  _version.py  cli.py  cli_config.py  cli_env.py  config.py  core.py  dropbox_client.py  secrets.py  update_check.py  workout.py
src/igpsync/gui/: __init__.py  app.py  settings_view.py  sync_view.py  system.py
src/intervalssync/: __init__.py  _dropbox_app_key.py  dropbox_client.py  intervals_icu.py
src/intervalssync/bryton/: __init__.py  api.py  core.py  ddp.py  exceptions.py  fit_encode.py  workout.py
src/intervalssync/cli/: __init__.py  config.py  env.py  main.py
src/intervalssync/gui/: __init__.py  app.py  auto_sync.py  config.py  profile_sync_ui.py  secrets.py  settings_view.py  support_gamification.py  sync_runner.py  sync_view.py  theme.py  update_check.py
src/intervalssync/igpsport/: __init__.py  core.py  interval_info.py  profile_sync.py  region.py  segment.py  workout.py  zone_map.py
tests/: test_bryton_core.py  test_bryton_fit_encode.py  test_bryton_fit_native.py  test_bryton_workout.py  test_cli.py  test_config.py  test_core.py  test_dropbox_client.py  test_gui_app.py  test_igpsport_core.py  test_intervals_icu.py  test_profile_sync.py  test_secrets.py  test_segment.py  test_support_gamification.py  test_sync_runner.py  test_update_check.py  test_workout.py  test_zone_map.py
tests/fixtures/bryton_workouts/: Foundation_2.fit  Foundation_2.json  app.fit  app.json  web_bsWO0618_011758.fit  web_bsWO0618_011758.json
tools/: make_icon.py
